# ChessNode

./: .eslintignore  .eslintrc.json  .gitignore  BUILDING.md  ENGINE_SCALING.md  agent_motivation.md  evaluation.md  longRunningConcerns.md  package-lock.json  package.json  readme.md  rebuild-all.ps1  rebuildall.cmd  rebuildall.mjs  rebuildall.ps1  vitest.config.mjs
.github/workflows/: ai-issue-autopilot.yml  deploy-pages.yml  engine-ci.yml
engine/: CMakeLists.txt  Makefile
engine/include/: engine.h
engine/src/: Eval_Symmetry.cpp  colorblind_engine.cpp  descendants.cpp  eval.cpp  example.cpp  fen.cpp
engine/tests/: apply_move_cli.cpp  bishop_pawn_capture_pref_cli.cpp  black_promotes_first_cli.cpp  castling_cost_sanity_cli.cpp  choose_best_move_cli.cpp  d5_best_rank_test.cpp  depth19_detect_promotion_cli.cpp  depth6_eval_cli.cpp  even_depth_eval_cli.cpp  explain_best_move_cli.cpp  fatal_promotion_eval_cli.cpp  fen_flip_cli.cpp  find_bad_moves_cli.cpp  illegal_black_root_cli.cpp  line_scoring_dump_cli.cpp  parent_zero_eval_cli.cpp  regression_knight_blunder_cli.cpp  regression_knight_blunder_expect_bad_cli.cpp  regression_knight_blunder_test.cpp  score_children_dump_cli.cpp  symm_move_dump_driver.cpp  symm_trace_driver.cpp  symmetry_debug.cpp  symmetry_positions_test.cpp  symmetry_thread_probe.cpp  tempo_sanity_cli.cpp  test_symmetry.cpp  tests_main.cpp  trade_neutrality_cli.cpp  undevelopment_rank_test.cpp  why_no_knight_take_cli.cpp
gui/: BoardWidget.cpp  BoardWidget.hpp  EngineController.cpp  EngineController.hpp  main.cpp
native/: CMakeLists.txt  engine.cpp  engine.hpp  legal_moves_runner.cpp  nnue.cpp  nnue.hpp  perft.cpp
public/: app.js  index.html  lichess.html  lichess.js
scripts/: bench_movegen.js  build-server.ps1  find_fatal_promotion_fen.js  kill-port.js  make-stable.ps1  make-stable.sh  record_promotion_race_evals.js  run-server.ps1  search_castle.js  serve-8080.ps1  simple-static-server.js  static-server.ps1  stockfish_probe.js  stockfish_promotion_race_test.js  test-depth-node.js
server/: README.md  native-wrapper.js  server.js
server/native-addon/: addon.cc  binding.gyp
server/src/: main.cpp
src/: cheatStore.js  dbAdapter.js  format1Store.js  format2_encode.js  generate_format1.js  lichessDownloader.js  openingBook.js  pgn_utils.js  position128.js  position64.js  secrets.js  server.js  uciClient.js  uciEngine.js
src/db_cache/: cheat.blob  cheat.index
src/engine/: worker.js
src/tests/: blunder_detection.test.js  castling_incentive.test.js  crosscheck_alt_search.test.js  early_king_move_penalty.test.js  engine_search.test.js  flip_flag.test.js  format1_generator.test.js  format2_encode.test.js  king_move_avoidance.test.js  lichess_integration.test.js  mate_detection.test.js  mate_threat_hxg2_regression.test.js  mate_threat_regression.test.js  openingBook.test.js  pgn_playback_eval.test.js  pgn_regression.test.js  pgn_regression_mates.test.js  position64.test.js  test_position64.js
src/tests/fixtures/games/: local_session_2025_11_08.pgn  local_session_2025_11_08_b.pgn  local_session_2025_11_09_badmoves.pgn
utilities/: board2fen.js  fen2board.js  fenflip.js  terminal_debug.js
utilities/boards/: check_castle.board  test1.board
web/: README.md  broken.html  engine-bridge2.js  engine-config.html  engine-dev.html  engine-explorer.html  engine-wasm-loader.js  index.html  package-lock.json  package.json  vitest.config.mts
web/css/: style.css
web/js/: host-capabilities.js  ui-board.js  ui-config.js  ui-devtools.js  ui-engine-bridge.js  ui-eval-config.js  ui-explorer.js  ui-id-hint.js
web/schema/: evaluation.schema.json
web/tests/: chess960_castling.test.mjs  en_passant.test.mjs  en_passant_choice.test.mjs  en_passant_eval.test.mjs  en_passant_legality.test.mjs  engine-bridge2.stub.mjs  index-castle-ui-std-variants.test.mjs  index-castle-ui.test.mjs  index-ui.test.mjs  legal_check_filter.test.js  mate_stalemate.test.js  move_scores_dump.test.js  normalize_white_dump.test.js  pinned_knight.test.mjs  position_choice.test.js  promotion.test.js  promotion_choice.test.js  repetition_draw.test.js  setupDom.mjs  stalemate_in_one_check.test.js  stalemate_prefer.test.js  terminal_detection.test.js
web/wasm/: .gitignore  README.md  engine_pthreads.js
web/ws/: promotionSimple.test.ts  promotionSimple.ts  promotionThreat.ts
